# TradingProject

./: LICENSE  README.md  main.py  playground.py  pyproject.toml
data/cache/: symbols_us_equity_nasdaq.txt  symbols_us_equity_nyse.txt
data/ticker_lists/: crypto.json  us_equities.json
notebooks/: AlpacaApi.ipynb  EDA.ipynb  Kraken.ipynb  trading212.ipynb
src/utils/: alpaca_utils.py  common.py
training/: app.py
training/config/: strategies.yaml
training/utils/: constants.py  indicators.py  io.py  strategy.py
